--- a/config.json
+++ b/config.json
@@ -1,10 +1,10 @@
 {
-  "timeZone": "Asia/Dhaka",
-  "prefix": "!",
+  "timeZone": "Asia/Karachi",
+  "prefix": ".",
   "language": "en",
   "api": "http://65.109.80.126:20409/aryan",
   "baby": "https://nix-baby-apis.vercel.app",
-  "nickNameBot": "Goat-Bot-V2",
+  "nickNameBot": "𝑺𝑯𝑨𝑨𝑵-𝑮𝑶𝑨𝑻-𝑩𝑶𝑻",
   "database": {
     "type": "sqlite",
     "uriMongodb": "",
@@ -47,13 +47,13 @@
     "ignoreCommand": []
   },
   "adminBot": [
-    "100001611578438"
+    "100016828397863"
   ],
   "developer": [
-    "100001611578438"
+    "100016828397863"
   ],
   "vipuser": [
-    "100001611578438"
+    "100016828397863"
   ], 
   "whiteListMode": {
     "enable": false,
